root/static/common/css/common.css
body {
    color: #969696;
    background-color: #333;
    font-family: PFD-Light,'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: normal;
    margin: 0;
    padding: 0;
}

.main-container {
    background-color: #333;
}

.header {
    background-color: #292929;
    height: 80px;
}

.header-right {
    float: right;
}

.footer {
    background-color: #292929;
    height: 80px;
}

.footer a {
    text-decoration: underline;
}

.narrow-container {
    min-height: 733px;
}

.container {
    width: 940px;
    margin-left: auto;
    margin-right: auto;
}

h1, h2, h3 {
    color: #fff;
    padding: 0;
    margin: 0;
    text-transform: uppercase;
    font-weight: normal;
}

h3 {
    font-family: PFD-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 24px;
}

p {
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
    color: inherit;
}

hr {
    border: 1px solid #4f4f4f;
    margin-top: 10px;
    margin-bottom: 20px;
}


a:hover {
    color: white;
}

.cloudpebble-logo {
    float: left;
    height: 80px;
    line-height: 80px;
    font-size: 24px;
    font-weight: normal;
}

.cloudpebble-logo-cloud {
    font-family: PFD-Bold, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.cloudpebble-logo-pebble {
    font-family: PFD-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.small-print {
    float: left;
    height: 48px;
    margin-top: 16px;
    line-height: 24px;
}

.pebble-logo {
    float: right;
    padding-top: 28px;
}

.btn {
    border: none;
    cursor: pointer;
    position: relative;
    text-decoration: none;
    display: inline-block;
    text-transform: uppercase;
    font-size: 18px;
    text-align: center;
    white-space: nowrap;
    height: 40px;
    width: 130px;
    line-height: 40px;
    max-width: 100%;
    border-radius: 5px;
    background-color: white;
    color: #ff4700;
    font-family: PFD-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    transition: all 300ms ease;
}

.btn[disabled] {
    background-color: gray !important;
    opacity: 1 !important;
    cursor: default;
}

.btn.btn-primary:hover {
    background-color: #db3d00;
    color: #ededed;
}

.btn:hover {
    color: #db3d00;
    background-color: #ededed;
}

.btn.btn-cancel:hover {
    background-color: #333;
    color: #aaaaaa;
}

a.btn {
    display: inline-block;
    height: 37px;
    padding-top: 2px;
    padding-bottom: 1px;
}

.btn.btn-primary {
    color: white;
    background-color: #ff4700;
}

.btn.btn-cancel {
    color: white;
    background-color: #3f3f3f
}

.btn-small {
    font-size: 12px;
    height: 20px;
    line-height: 18px;
    width: initial;
}

a.btn-small {
    height: 20px;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 3px;
}

.btn.btn-affirmative {
    color: white;
    background-color: #00B293;
}

.btn.btn-affirmative:hover {
    background-color: #008c6f;
}

.btn.btn-danger {
    color: white;
    background-color: #e5171f;
}

.btn.btn-danger:hover {
    background-color: #b2171e;
}

.blur {
    -webkit-filter: blur(5px) brightness(40%);
}

.hide {
    display: none;
}

ul.nav-pills {
    margin: 0;
    list-style: none;
    line-height: 80px;
}

.nav-pills li {
    float: left;
    margin-left: 20px;
}

.nav-pills .btn {
    background: none;
    color: white;
}
.nav-pills .btn.active {
    background-color: #3f3f3f
}

table.table {
    width: 100%;
    border-collapse: collapse;
}

table.table th {
    text-transform: uppercase;
    text-align: left;
    font-size: 18px;
    font-weight: normal;
    font-family: PFD-Bold, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

table.table tr {
    height: 60px;
}

table.table td {
    border-top: 2px solid #4f4f4f;
    font-size: 18px;
}

.well {
    background-color: #3d3d3d;
    border-radius: 10px;
    padding: 20px 50px;
}

.header {
    margin-bottom: 40px;
}

.footer {
    margin-top: 40px;
    clear: both;
}

.label {
    display: inline-block;
    font-size: 13px;
    color: white;
    border-radius: 2px;
    text-transform: uppercase;
    margin-left: 8px;
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 4px;
    font-family: PFD-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.label-success {
    background-color: #00B293;
}

.label-error {
    background-color: #E5171F;
}

.label-info {
    background-color: #3a87ad;
}

h2.section-heading {
    line-height: 50px;
    margin-left: 50px;
    font-family: PFD-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.form-horizontal .control-group::after {
    clear: both;
    content: "";
    display: table;
}

.form-horizontal .control-group {
    min-height: 40px;
}

.form-horizontal .control-group label {
    float: left;
    text-transform: uppercase;
    font-family: PFD-Regular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    color: white;
    font-size: large;
    line-height: 40px;
    text-align: right;
    width: 130px;
    padding-right: 20px;
}

.form-horizontal .controls {
    margin-bottom: 20px;
}

select {
    -webkit-appearance: none;
    height: 40px;
    line-height: 30px;
    border-radius: 10px;
    background-color: white;
    font-family: PFD-Light, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: larger;
    width: 270px;
    border: none;
    padding-top: 5px;
    padding-left: 15px;
    cursor: pointer;
    background-position: right 10px center;
    background-repeat: no-repeat;
    background-image: url('../../common/img/dropdown.png');
}

input[type=text], input[type=number], input[type=password], input[type=tel] {
    height: 35px;
    font-family: PFD-Light, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: larger;
    border: none;
    border-radius: 10px;
    padding-top: 5px;
    padding-left: 15px;
    margin: 0;
    padding-right: 0;
    padding-bottom: 0;
}

input[type=number] {
    width: 100px;
}

input[type=checkbox] {
    -webkit-appearance: none;
    display: inline-block;
    height: 30px;
    width: 30px;
    cursor: pointer;
    background-image: url('../../common/img/checkbox-unchecked.png');
}

input[type=checkbox]:checked {
    background-image: url('../../common/img/checkbox.png');
}

/* Form popover thing */

.form-horizontal.form-popover .control-group label {
    font-size: medium;
    line-height: 20px;
    width: 100px;
}


.form-horizontal.form-popover .controls {
    margin-bottom: 10px;
}

.form-horizontal.form-popover .control-group {
    min-height: 30px;
}

.form-popover .btn {
    height: 30px;
    font-size: 16px;
    width: 100px;
    line-height: 30px;
}

.form-popover input[type=checkbox] {
    height: 18px;
    width: 18px;
    margin: 0;
    background-image: url('../../common/img/small-checkbox-unchecked.png');
}

.form-popover input[type=checkbox]:checked {
    background-image: url('../../common/img/small-checkbox.png');
}

.help-block {
    display: block;
    clear: both;
    margin-left: 150px;
    padding-top: 20px;
    font-family: PFD-Light, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: large;
    width: 435px;
}

.nav-tabs {
    list-style: none;
    padding: 0;
    margin: 0;
    width: 100%;
}

.nav-tabs:after {
    content: "";
    clear: both;
    padding-bottom: 20px;
    display: block;
}

.nav-tabs li {
    float: left;
    display: block;
    border: 2px solid white;
    padding: 5px;
    width: calc(50% - 13px);
    text-align: center;
}

.nav-tabs li:not(:last-child) {
    border-right: none;
}

.nav-tabs li:first-child {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.nav-tabs li:last-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.nav-tabs li > a {
    color: white;
    font-size: large;
    text-transform: uppercase;
    font-family: PFD-Bold, 'Helvetica Neue', Helvetica, Arial, sans-serif;
    display: inline-block;
    width: 100%;
}

.nav-tabs li.active {
    background-color: white;
}

.nav-tabs li.active > a {
    color: #333;
}

/* Modals! */

.modal {
    position: fixed;
    top: 10%;
    left: 50%;
    z-index: 1050;
    margin-left: -300px;
    width: 600px;
    background-color: #333;
    border: 1px solid #999;
    border: 1px solid rgba(0,0,0,0.3);
    border-radius: 10px;
    outline: 0;
    box-shadow: 0 3px 7px rgba(0,0,0,0.3);
    background-clip: padding-box;
}

.fade {
    top: -25%;
    opacity: 0;
    -webkit-transition: opacity .3s linear,top .3s ease-out;
    -moz-transition: opacity .3s linear,top .3s ease-out;
    -o-transition: opacity .3s linear,top .3s ease-out;
    transition: opacity .3s linear,top .3s ease-out;
}

.fade.in {
    opacity:1;
    top: 10%;
    display: block;
}

.modal-header {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    background-color: #292929;
    text-align: center;
}

.modal-header h3 {
    padding: 20px;
    margin: 0;
}

.modal-footer {
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
    background-color: #292929;
    text-align: center;
    padding: 20px;
}

.modal-body {
    position: relative;
    max-height: 400px;
    padding: 30px;
    overflow-y: auto;
}

.modal-footer .btn:not(:last-child) {
    margin-right: 20px;
}

body.backdrop .main-container {
    /*filter: url(/static/ide/svg/filters.svg#modal-blur);*/
    /*-webkit-filter: blur(10px);*/
}

.main-container {
    transition: -webkit-filter 0.3s linear;
}

.modal-backdrop {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    opacity: 0;
    transition: opacity 0.3s linear;
    background-color: black;
}

.modal-backdrop.in {
    opacity: 0.5;
}

.modal-body .control-group:not(:last-of-type) {
    padding-bottom: 10px;
}

.modal-body .form-horizontal .control-group label {
    width: 180px;
}

.modal-body .help-block {
    margin-left: 200px;
    width: 350px;
}

.modal-body input:not([type=checkbox]) {
    width: 310px;
}

.modal-body > p {
    text-align: center;
    color: white;
    font-size: large;
    padding: 10px;
}

.modal-body select {
    width: 325px;
}

.tab-pane {
    display: none;
}

.tab-pane.active {
    display: block;
}

.whats-new-text {
    color: white;
}

.whats-new-text a {
    text-decoration: underline;
    color: #3DBFFF;
}

#whats-new p {
    padding: 0;
}

input:invalid,
textarea:invalid,
select:invalid {
  color: #b2171e;
}

.alert.alert-error {
    color: white;
    background-color: #b2171e;
}

.alert.alert-warning {
    color: white;
    background-color: #fd971f;
}

.alert.alert-success {
    color: white;
    background-color: #00B293;
}

.well.alert {
    padding-bottom: 15px;
}

.modal .alert {
    border-radius: 10px;
    padding: 10px 20px;
    padding-bottom: 8px;
    margin-right: 12px;
    margin-left: 12px;
    margin-bottom: 20px;
}

.lang-select {
    float: right;
    padding-top: 20px;
    padding-right: 20px;
}

.lang-select select {
    width: 150px;
    text-transform: capitalize;
}

.project-page.lang-select  {
    padding-top: 11px;
}

.project-page.lang-select select {
    height: 30px;
    padding-top: 2px;
}

